// Copyright 2021-2022 Zenauth Ltd.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package cerbos.state.v1;

option go_package = "github.com/cerbos/cerbos/api/genpb/cerbos/state/v1;statev1";

import "cerbos/telemetry/v1/telemetry.proto";
import "google/protobuf/timestamp.proto";

message TelemetryState {
    bool suspend = 1;
    google.protobuf.Timestamp last_timestamp = 2;
    cerbos.telemetry.v1.Ping last_payload = 3;
}
